2000-09-14  Michael Natterer  <mitch@gimp.org>

	* app/disp_callbacks.c: always position the menu inside the
	screen boundaries.

2000-09-14  Michael Natterer  <mitch@gimp.org>

	* app/disp_callbacks.c: new function gdisplay_origin_menu_position()
	which positions the menu right of the arrow instead of underneath
	the mouse (where you always have the first entry selected, which
	is annoying).

2000-09-07  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/common/ps.c: Use fopen (xxx, "rb") on all systems. It
	is standard C, does no harm on systems where it isn't needed
	(Unix).

	* libgimp/gimp.c (gimp_extension_process): Use
	g_io_channel_win32_poll() instead of
	g_io_channel_win32_wait_for_condition().

Wed Aug 30 19:01:28 BST 2000  Adam D. Moss <adam@gimp.org>

	* plug-ins/common/animoptimize.c: Same again.

Wed Aug 30 18:49:01 BST 2000  Adam D. Moss <adam@gimp.org>

	* plug-ins/common/animationplay.c: Change default frame duration
	for consistancy.

Wed Aug 30 01:19:03 PDT 2000 Manish Singh <yosh@gimp.org>

	* plug-ins/gap/resize.c
	* plug-ins/gdyntext/charmap.c
	* plug-ins/gdyntext/charmap_window.c
	* plug-ins/gdyntext/message_window.c
	* plug-ins/gimpressionist/color.c
	* plug-ins/gimpressionist/general.c
	* plug-ins/gimpressionist/orientation.c
	* plug-ins/gimpressionist/orientmap.c
	* plug-ins/gimpressionist/paper.c
	* plug-ins/gimpressionist/placement.c
	* plug-ins/gimpressionist/presets.c
	* plug-ins/gimpressionist/preview.c
	* plug-ins/gimpressionist/size.c
	* plug-ins/gimpressionist/sizemap.c: more COMPAT_CRUFT removal

2000-08-29  Piers Cornwell  <piers.cornwell@bigfoot.com>

	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/Lighting/lighting_preview.h: Make Env and Bumpmap
	tabs show all the time and other minor changes.

2000-08-28  Piers Cornwell  <piers.cornwell@bigfoot.com>

	* plug-ins/Lighting/lighting_main.[ch]:
	* plug-ins/Lighting/lighting_preview.h:
	* plug-ins/Lighting/lighting_ui.c: Clean up and remove 
	non-functional zoom buttons.
